# jupyterhub-ldap-authenticator

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Makefile.helpers  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  SECURITY.md  renovate.json
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  support-request.yml
.github/workflows/: python.yml
docs/proposals/: admin-from-ldap-group.md  sasl-kerberos.md
examples/docker/: README.md  docker-compose.yml
examples/docker/jupyterhub/: Dockerfile  jupyterhub_config.py
examples/docker/ldap/: bootstrap.ldif
ldapauthenticator/: __init__.py  ldapauthenticator.py
tests/: conftest.py  test_ldapauthenticator.py
