[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyterhub-ldap-authenticator"
description = "LDAP Authenticator plugin for JupyterHub"
readme.content-type = "text/markdown"
readme.file = "README.md"
keywords = ["ldap", "authenticator", "authentication", "jupyterhub", "jupyter"]
license = "MIT"
maintainers = [{ name = "Ryan Hansohn", email = "info@imnorobot.com" }]
authors = [{ name = "Ryan Hansohn", email = "info@imnorobot.com" }]
requires-python = ">=3.8"
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = ["jupyterhub>=2.0.0", "ldap3>=2.5", "tornado>=5.0", "traitlets>=4.3.2"]
urls.Source = "https://github.com/hansohn/jupyterhub-ldap-authenticator"
urls.Tracker = "https://github.com/hansohn/jupyterhub-ldap-authenticator/issues"

[tool.setuptools_scm]
version_file = "ldapauthenticator/_version.py"

[tool.setuptools.packages.find]
include = ["ldapauthenticator*"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S", "PL"]
ignore = ["PLR0911", "PLR0912", "PLR0915", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "PLR2004"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
warn_unused_ignores = true
